# cosmos-id

./: Algo.md  Cargo.toml  Encoding User Information in Osmosis.md  README.md
cosmos_id/: Cargo.toml
cosmos_id/src/: lib.rs
cosmos_id_cli/: cargo.toml
cosmos_id_cli/src/: main.rs
