[package]
name = "cosmos_id"
version = "0.1.0"
authors = ["Amos Elmaliah <amosel@gmail.com>"]
edition = "2021"

[dependencies]
aes-gcm = "0.10.1"
bech32 = "0.9.1"
hex = "0.4.3"
k256 = { version = "0.11.6", features = ["ecdsa"] }
rand_core = "0.6.4"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sha2 = "0.10.6"